mywork/force-app/main/default/objects/ALM_Application_Result__c/ALM_Application_Result__c.object-meta.xml
<CustomObject>
    <label>ALM Application Result</label>
    <nameField>
        <displayFormat>AAR-{00000}</displayFormat>
        <label>ALM Application Results Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ALM Application Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>