mywork/force-app/main/default/objects/ALM_Application_Result__c/fields/ALM_Job__c.field-meta.xml
<CustomField>
    <fullName>ALM_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ALM Job</label>
    <referenceTo>ALM_Job__c</referenceTo>
    <relationshipLabel>ALM Application Results</relationshipLabel>
    <relationshipName>ALM_Application_Results</relationshipName>
    <type>Lookup</type>
</CustomField>