mywork/force-app/main/default/objects/ALM_Application_Result__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF(NOT(ISNULL(Run_Time__c)), (Run_Time__c -  Start_Time__c), (NOW() - Start_Time__c)) * 60 * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>