mywork/force-app/main/default/objects/ALM_Application_Result__c/fields/Instance__c.field-meta.xml
<CustomField>
    <fullName>Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instance</label>
    <referenceTo>Instances__c</referenceTo>
    <relationshipLabel>ALM Application Results</relationshipLabel>
    <relationshipName>ALM_Application_Results</relationshipName>
    <type>Lookup</type>
</CustomField>