mywork/force-app/main/default/objects/ALM_Application_Result__c/fields/Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Run_Time__c</fullName>
    <inlineHelpText>The time the job finished running</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>