mywork/force-app/main/default/objects/ALM_Application_Result__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <inlineHelpText>The time the job started running</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>